[package]
name = "fiddle-with-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dusk-plonk = "0.11.0"
merlin = "3.0.0"
dusk-bls12_381 = "0.10.1"
rand_core = "0.6.3"
dusk-jubjub = "0.11.1"
dusk-poseidon = "0.26.0"